# vidpost-public

./: .gitattributes  .gitignore  README.md  SETUP.md  pyproject.toml
config/: config.example.yaml
docs/superpowers/specs/: 2026-04-12-vidpost-design.md
src/vidpost/: __init__.py  cli.py  config.py  db.py  metadata.py  models.py  scheduler.py
src/vidpost/captions/: __init__.py  analyzer.py  style.py  transforms.py
